--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,4 +3,7 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home2/footandball/public_html/
     - /bin/cp -R images $DEPLOYPATH
-    - /bin/cp index.html $DEPLOYPATH
+    - /bin/cp -R css $DEPLOYPATH
+    - /bin/cp -R js $DEPLOYPATH
+    - /bin/cp -R img $DEPLOYPATH
+    - /bin/cp *.html $DEPLOYPATH
