--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -5,4 +5,5 @@ deployment:
     - /bin/cp -R images $DEPLOYPATH
     - /bin/cp -R css $DEPLOYPATH
     - /bin/cp -R js $DEPLOYPATH
+    - /bin/cp -R img $DEPLOYPATH
     - /bin/cp *.html $DEPLOYPATH
